[package]
name = "practice_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
crossbeam = "0.8.4"
async-std = {version = "1.9.0", features = ["attributes"]}
